--- a/src/index.css
+++ b/src/index.css
@@ -23,13 +23,15 @@ a {
     grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
     column-gap: 10px;
     row-gap: 30px;
-    padding: 120px 50px;
+    padding: 25px 50px 70px 50px;
 }
 .product-container {
     max-width: 300px;
     position: relative;
+    overflow: hidden;
+    min-height: 320px;
 }
-.product-container > p {
+.product-info p {
     margin-top: 7px;
 }
 .product-images {
@@ -41,6 +43,8 @@ a {
     top: 0;
     left: 0;
     z-index: 2;
+    transition: animation .5s ease;
+    
 }
 .price {
     font-size: 14px;
@@ -57,4 +61,35 @@ a {
 }
 .product-container:hover .product-images.img-2 {
     display: inline;
+    animation: img2hover .5s both ease;
+}
+.product-info {
+    padding: 7px 0;
+    position: absolute;
+    width: 100%;
+    height: 50px;
+    bottom: 12px;
+    left: 0;
+    background-color: #ffffff;
+    z-index: 3;
+}
+@keyframes img2hover {
+    0% {
+        transform: scale(100%);
+    }
+    100% {
+        transform: scale(103%)
+    }
+}
+.sectionHeader {
+    text-align: center;
+    padding: 50px 0 20px 0;
+}
+.sectionHeader h2 {
+    font-size: 32px;
+    font-weight: 500;
+    margin-bottom: 25px;
+}
+.sectionHeader p {
+    font-weight: 300;
 }
