--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,9 @@
 }
 :root {
     --space: 'Space Grotesk', sans-serif;
+    --h3: 2.25rem;
+
+    --black: #212121;
 }
 body {
     font-family: var(--space);
@@ -13,17 +16,19 @@ body {
 a {
     text-decoration: none;
     font-weight: 400;
-    color: #212121;
+    color: var(--black);
 }
-.productList {
+.productList, .cart {
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
+    padding: 25px 50px 70px 50px;
+}
+.productList {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
     column-gap: 10px;
     row-gap: 30px;
-    padding: 25px 50px 70px 50px;
 }
 .product-container {
     max-width: 300px;
@@ -57,7 +62,7 @@ a {
     transition: all 0.1s ease;
 }
 .product-container:hover .product-name {
-    border-bottom: 0.5px solid #212121;
+    border-bottom: 0.5px solid var(--black);
 }
 .product-container:hover .product-images.img-2 {
     display: inline;
@@ -86,10 +91,31 @@ a {
     padding: 50px 0 20px 0;
 }
 .sectionHeader h2 {
-    font-size: 32px;
+    font-size: 2rem;
     font-weight: 500;
     margin-bottom: 25px;
 }
 .sectionHeader p {
     font-weight: 300;
 }
+/* ------------------ */
+/* Cart .your-cart */
+/* ------------------ */
+.your-cart {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 0;
+}
+.your-cart h3 {
+    font-size: var(--h3);
+    font-weight: 300;
+}
+.your-cart a {
+    font-size: 0.875rem;
+    padding-bottom: 0.2px;
+    border-bottom: 0.5px solid var(--black);
+}
+/* ------------------ */
+/* Cart .cart-header */
+/* ------------------ */
