--- a/src/index.css
+++ b/src/index.css
@@ -327,3 +327,38 @@ li {
 .active {
   border-bottom: 0.5px solid var(--black);
 }
+/* ------------------ */
+/* Footer */
+/* ------------------ */
+.footer {
+  border-top: 0.5px solid var(--lineColor);
+  border-bottom: 0.5px solid var(--lineColor);
+  padding-top: 20px;
+}
+.footer-nav-links {
+  display: flex;
+  gap: 2rem;
+  margin-bottom: 35px;
+}
+.footer-nav-links section {
+  flex: 1;
+}
+.footer-nav-links section h2 {
+  font-size: 1.05rem;
+  font-weight: 400;
+  line-height: 3;
+  line-height: 3.4;
+}
+.footer-links a,
+.mission p {
+  font-weight: 200;
+  letter-spacing: 0.8px;
+  line-height: 2.5;
+  color: var(--darkgrey);
+}
+.footer-links a {
+  font-size: 0.8rem;
+}
+.mission p {
+  font-size: 0.95rem;
+}
