--- a/src/index.css
+++ b/src/index.css
@@ -346,7 +346,6 @@ li {
 .footer-nav-links section h2 {
   font-size: 1.05rem;
   font-weight: 400;
-  line-height: 3;
   line-height: 3.4;
 }
 .footer-links a,
@@ -361,4 +360,29 @@ li {
 }
 .mission p {
   font-size: 0.95rem;
+}
+/* ------------------ */
+/* Subscribe */
+/* ------------------ */
+.input-box {
+  border: 1px solid var(--grey);
+  width: fit-content;
+}
+.input-box input {
+  border: none;
+  outline: none;
+  display: inline-block;
+  padding: 15px 20px;
+  min-width: 350px;
+}
+.left-arrow {
+  padding: 0 15px;
+}
+.input-box input::placeholder {
+  color: var(--grey);
+}
+label {
+  font-size: 1rem;
+  font-weight: 350;
+  line-height: 3.4;
 }
