--- a/src/index.css
+++ b/src/index.css
@@ -380,9 +380,23 @@ li {
 }
 .input-box input::placeholder {
   color: var(--grey);
+  font-size: 1rem;
+  letter-spacing: 1px;
 }
 label {
   font-size: 1rem;
   font-weight: 350;
   line-height: 3.4;
+}
+.footer-bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+/* ------------------ */
+/* Social-links */
+/* ------------------ */
+.social-links {
+  display: flex;
+  gap: 1.5rem;
 }
